...

    func infoBoxHeader(infobox: InfoBox) -> some View {
        HStack {
            Text(infobox.name)
                .font(.headline)
                .fontWeight(.bold)
            if infobox.name != "Overall", infobox.name != "Manual" {
                Menu {
                    Button(action: {
                        removeCryptoExchange(infobox: infobox)
                    }) {
                        Label("Delete", systemImage: "minus.circle")
                    }
                } label: {
                    Image("RemoveExchange")
                }
            }
        }
    }

    func cryptoExchangeView(cryptoInfo: [CryptoInfo], cryptoExchange: String) -> some View {
...
