...
                .padding(.top, 30)
                HStack {
                    NavigationLink(destination: NewsView().navigationBarBackButtonHidden(true)) {
                        Image(systemName: "newspaper")
                            .foregroundColor(Color("BackgroundColor"))
                            .imageScale(.large)
                        Text("News")
                            .foregroundColor(Color("BackgroundColor"))
                            .font(.headline)
                    }
                }
                .padding(.top, 30)
                HStack {
                    NavigationLink(destination: HView().navigationBarBackButtonHidden(true)) {
                        Image(systemName: "info.circle")
                            .foregroundColor(Color("BackgroundColor"))
                            .imageScale(.large)
                        Text("Help")
                            .foregroundColor(Color("BackgroundColor"))
                            .font(.headline)
                    }
                }
                .padding(.top, 30)
                Spacer()
...
